...
    </dependencies>
    <scenes>
        <!--Home-->
        <scene sceneID="DSe-rN-01g">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="j7k-lZ-Pdr" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="N8P-Rc-2kz"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="chP-7t-Mv3">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
...
                                                        <constraint firstAttribute="height" constant="22" id="3E0-7s-Tx0"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get quick update about lecture schedule stay tuned with LMS" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" transl
                                                    <rect key="frame" x="88" y="41" width="311" height="45"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
            </objects>
            <point key="canvasLocation" x="1086" y="-361"/>
        </scene>
        <!--Notifications-->
        <scene sceneID="hc0-JY-VqZ">
            <objects>
                <viewControllerPlaceholder storyboardName="Notifications" id="JVA-vD-L7v" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="a6h-Bl-aqe"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="xWs-Bn-dIR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1090" y="-338"/>
        </scene>
...
