...
            </objects>
            <point key="canvasLocation" x="1109" y="562"/>
        </scene>
        <!--Settings-->
        <scene sceneID="v4q-3a-B43">
            <objects>
                <viewControllerPlaceholder storyboardName="Settings" id="GaJ-SV-BkR" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="umu-Ry-hZ0"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="NnT-Ep-7ol" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1664" y="562"/>
        </scene>
...
